# Project-Younicorn

./: .backend_url  .dockerignore  .gitignore  API_ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  INTEGRATION_README.md  Makefile  README.md  cloudbuild.yaml  deploy.sh  firestore.indexes.json  firestore.rules  integrated_server.py  main.py  pyproject.toml  run_integrated_server.py  test_agents.py  test_auth.py  test_integration.py
api/: __init__.py
api/config/: __init__.py  settings.py
api/models/: __init__.py  requests.py  responses.py
api/routes/: __init__.py  activity.py  analysis.py  auth.py  beacon.py  dashboard.py  firebase_auth.py  founder.py  images.py  notifications.py  questions.py  reanalysis.py  startup_status.py  startups.py
api/services/: __init__.py  analysis_service.py  beacon_agent_service.py  bigquery_client.py  file_content_cache_service.py  file_handling_service.py  firestore_client.py  firestore_session_service.py  gcs_storage.py  reanalysis_service.py
api/utils/: __init__.py  auth.py  firebase_auth.py  json_utils.py
app/: .env  __init__.py  agent.py  config.py
app/agents/: __init__.py  beacon_agent.py  beacon_tools.py  callbacks.py  competition_agent.py  config.py  files_analysis_agent.py  main_agent.py  market_agent.py  orchestrator.py  product_agent.py  synthesis_agent.py  team_agent.py
app/models/: __init__.py  analysis.py  startup.py  user.py
app/storage/: __init__.py  bigquery_client.py  startup_storage.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ProtectedRoute.tsx  profile-icon-upload.tsx  startup-logo-upload.tsx
frontend/src/components/activity/: activity-feed.tsx
frontend/src/components/beacon/: beacon-button.tsx  beacon-chat.tsx  beacon-context-tag.tsx  beacon-context.tsx  beacon-section-icon.tsx  beacon-subsection-icon.tsx  index.ts
frontend/src/components/layout/: auth-layout.tsx  dashboard-layout.tsx
frontend/src/components/notifications/: notification-bell.tsx
frontend/src/components/questions/: answer-questions-modal.tsx  ask-question-modal.tsx  questions-list.tsx
frontend/src/components/ui/: aurora-background.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  toast.tsx
frontend/src/config/: firebase.ts
frontend/src/contexts/: AuthContext.tsx  auth-context.tsx
frontend/src/hooks/: use-activity.ts  use-auth.ts  use-notifications.ts  use-questions.ts
frontend/src/pages/: not-found.tsx
frontend/src/pages/analysis/: analysis.tsx
frontend/src/pages/auth/: login.tsx  register.tsx
frontend/src/pages/dashboard/: dashboard.tsx
frontend/src/pages/founder/: FounderDashboard.tsx
frontend/src/services/: api.ts  imageService.ts  questions.ts
frontend/src/types/: index.ts  questions.ts
frontend/src/utils/: index.ts
(+10 files in other folders)
